fix: remove increment buttons on Firefox

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -731,6 +731,16 @@ label[for="id_price"] {
     color: var(--warning) !important;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 
 /* Nav */
 
